@@ -3563,6 +3563,14 @@ PHP_FUNCTION(array_slice)
 		return;
 	}
 
+	if ((offset == 0) && (length >= num_in) &&
+		HT_IS_PACKED(Z_ARRVAL_P(input)) &&
+		HT_IS_WITHOUT_HOLES(Z_ARRVAL_P(input))) {
+		/* No real slicing, and the keys will be 0..n-1, so just copy */
+		ZVAL_COPY(return_value, input);
+		return;
+	}
+
 	/* Initialize returned array */
 	array_init_size(return_value, (uint32_t)length);
 
